# speed-test

./: .gitignore  README.md  steps.md  testFile.json
automate-benchmarks/: Cargo.toml
automate-benchmarks/src/: main.rs
bun/: bun.lockb  index.ts  package.json
bun_no_params/: README.md  bun.lockb  index.ts
go/: go.mod  main.go
graphs/: Cargo.toml  copy.rs
graphs/src/: main.rs
node/: index.js  package-lock.json  package.json
node/json/: 50726cab-8846-45aa-a715-14ffe6b3d9e5.json
node_no_params/: index.js
rust/: Cargo.toml
rust/src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
